@@ -10,7 +10,6 @@
 (depends-on "cl-lib" "0.5")
 
 (development
- (depends-on "s")
  (depends-on "f")
- (depends-on "ert-runner")
+ (depends-on "buttercup")
  (depends-on "undercover"))
