@@ -4,6 +4,12 @@ Copyright (C) 2019, 2020 Free Software Foundation, Inc.
 See the end of the file for license conditions.
 
 This file is about changes in BNF Mode.
+* Unreleased
+** Migrate tests from ert-runner to buttercup
+Previously BNF Mode used ert through ert-runner for testing
+purposes.  However, it seems ert-runner is abandoned (the last
+commit a few years ago), it still uses only Emacs 24 on its own
+tests and in general it looks as not maintained anymore project.
 
 * BNF Mode 0.4.4
 ** Rework documentation and provide Info-file.
